k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-api-deployment
  labels:
    app: rest-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rest-api
  template:
    metadata:
      labels:
        app: rest-api
    spec:
      containers:
        - name: rest-api
          image: my-rest-api:latest
          imagePullPolicy: Never   # IMPORTANT pour Minikube
          ports:
            - containerPort: 3000
