k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-api-service
spec:
  selector:
    app: rest-api
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
